--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ padding:2px;
 display: flex;
 justify-content:space-evenly;
 align-items:center;
-background:0px url('/storage/emulated/0/Ama Class website/Picsart_22-12-25_21-09-19-673.jpg');
+background:0px url('Picsart_22-12-25_21-09-19-673.jpg');
 }
 .box{
 border-radius: 10px;
@@ -261,7 +261,7 @@ Keep Study Keep Happy :)
 </div>
 
 <nav class="navbar" >
-<img src="/storage/emulated/0/Ama Class website/20221224_213732.png"  class="logo">
+<img src="20221224_213732.png"  class="logo">
 <ul clas="menue">
 <li><a href="#"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
 <li><a href="#"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
@@ -275,23 +275,23 @@ Keep Study Keep Happy :)
 <p class="m_para"> We make study simple and easy to understand !!!</p>
 </div>
 <div class="image">
-<img src="/storage/emulated/0/Ama Class website/20221225_113405.png" width="300px" class="frontlogo">
+<img src="20221225_113405.png" width="300px" class="frontlogo">
 </div>
 </header>
 
 <section class="example">
 <a class="box" href="#" id="box1">
-<span><img src="/storage/emulated/0/Ama Class website/20221225_212525.jpg" width="100%" height="100px">
+<span><img src="20221225_212525.jpg" width="100%" height="100px">
 <h4>New videos which uploded in Ama Class channel .</h4>
 <button class="bt">Click Here</button></span>
 </a>
 <a class="box" href="#" id="box2">
-<span><img src="/storage/emulated/0/Ama Class website/original.jpg" width="100%" height="100px">
+<span><img src="original.jpg" width="100%" height="100px">
 <h4 > New notes Of Class 12th Information Technology.</h4>
 <button class="bt">Click Here</button></span>
 </a>
 <a class="box" href="#" id="box3">
-<span><img src="/storage/emulated/0/Ama Class website/How-to-Create-an-Online-Course.png" width="100%" height="100px">
+<span><img src="How-to-Create-an-Online-Course.png" width="100%" height="100px">
 <h4> New course which are comming soon in Ama Class.</h4>
 <button class="bt">Click Here</button></span>
 </a>
@@ -299,7 +299,7 @@ Keep Study Keep Happy :)
  
 <section class="section2">
 <div class="s2div1">
-<img src="/storage/emulated/0/Ama Class website/20221030_155330.jpg" class="poster" width="250px"></div>
+<img src="20221030_155330.jpg" class="poster" width="250px"></div>
 <div class=""s2div2><h2 class="s2text" >Odisha's Number 1 Codding Course Created By HARESH PANIGRAHI !</h2>
 <a href="#"><button class="s2btn">WATCH NOW</button></a> </div>
 </section>
@@ -317,16 +317,16 @@ T
 S</pre>
 </div>
 <div class="s3div2">
-<img src="/storage/emulated/0/Ama Class website/Screenshot_2022_1226_105244.png" alt="comments" width="300px">
-<img src="/storage/emulated/0/Ama Class website/Screenshot_2022_1226_105325.png"  alt="comments" width="300px">
-<img src="/storage/emulated/0/Ama Class website/Screenshot_2022_1226_105351.png"  alt="comments" width="300px">
-<img src="/storage/emulated/0/Ama Class website/Screenshot_2022_1226_105522.png"  alt="comments" width="300px">
+<img src="Screenshot_2022_1226_105244.png" alt="comments" width="300px">
+<img src="Screenshot_2022_1226_105325.png"  alt="comments" width="300px">
+<img src="Screenshot_2022_1226_105351.png"  alt="comments" width="300px">
+<img src="Screenshot_2022_1226_105522.png"  alt="comments" width="300px">
 </div>
 </section>
 
 <footer>
 <div class="fdiv1"><span><a href="#" >
-<img src="/storage/emulated/0/Ama Class website/20221224_204244.png" alt="channel logo" width="40px">
+<img src="20221224_204244.png" alt="channel logo" width="40px">
 </a>
 <h3> Ama Class</h3>
 <p>Join us Odisha's No.1 Codding Channel !</p></span>
