--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ Keep Study Keep Happy :)
 <nav class="navbar" >
 <img src="20221224_213732.png"  class="logo">
 <ul clas="menue">
-<li><a href="#"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
-<li><a href="#"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
+<li><a href="meterials.html"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
+<li><a href="notes.html"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
 <li><a href="#"><button class="btn"><i class="fa fa-home"></i></button></a><br><span class="icontext">Home</span></li>
 </ul>
 </nav>
@@ -280,17 +280,17 @@ Keep Study Keep Happy :)
 </header>
 
 <section class="example">
-<a class="box" href="#" id="box1">
+<a class="box" href="https://youtube.com/@AmaClass" id="box1">
 <span><img src="20221225_212525.jpg" width="100%" height="100px">
 <h4>New videos which uploded in Ama Class channel .</h4>
 <button class="bt">Click Here</button></span>
 </a>
-<a class="box" href="#" id="box2">
+<a class="box" href="notes.html" id="box2">
 <span><img src="original.jpg" width="100%" height="100px">
 <h4 > New notes Of Class 12th Information Technology.</h4>
 <button class="bt">Click Here</button></span>
 </a>
-<a class="box" href="#" id="box3">
+<a class="box" href="https://youtube.com/playlist?list=PLg96AfYE6W2MVH7NB7koYPTxwibeHm_8H" id="box3">
 <span><img src="How-to-Create-an-Online-Course.png" width="100%" height="100px">
 <h4> New course which are comming soon in Ama Class.</h4>
 <button class="bt">Click Here</button></span>
@@ -301,7 +301,7 @@ Keep Study Keep Happy :)
 <div class="s2div1">
 <img src="20221030_155330.jpg" class="poster" width="250px"></div>
 <div class=""s2div2><h2 class="s2text" >Odisha's Number 1 Codding Course Created By HARESH PANIGRAHI !</h2>
-<a href="#"><button class="s2btn">WATCH NOW</button></a> </div>
+<a href="https://youtube.com/playlist?list=PLg96AfYE6W2MVH7NB7koYPTxwibeHm_8H" class="s2btn">WATCH NOW</button></a> </div>
 </section>
 
 <section class="section3">
