--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Keep Study Keep Happy :)
 <nav class="navbar" >
 <img src="20221224_213732.png"  class="logo">
 <ul clas="menue">
-<li><a href="meterials.html"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
+<li><a href="meterial.html"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
 <li><a href="notes.html"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
 <li><a href="#"><button class="btn"><i class="fa fa-home"></i></button></a><br><span class="icontext">Home</span></li>
 </ul>
