--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ Keep Study Keep Happy :)
 <div class="s2div1">
 <img src="20221030_155330.jpg" class="poster" width="250px"></div>
 <div class=""s2div2><h2 class="s2text" >Odisha's Number 1 Codding Course Created By HARESH PANIGRAHI !</h2>
-<a href="https://youtube.com/playlist?list=PLg96AfYE6W2MVH7NB7koYPTxwibeHm_8H" class="s2btn">WATCH NOW</button></a> </div>
+<a href="https://youtube.com/playlist?list=PLg96AfYE6W2MVH7NB7koYPTxwibeHm_8H"><button class="s2btn">WATCH NOW</button></a> </div>
 </section>
 
 <section class="section3">
