--- a/meterial.html
+++ b/meterial.html
@@ -3,6 +3,7 @@
 <head>
 <title>Study Meterial</title>
 </head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <style type="text/css">
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap'); 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Oriya:wght@600&display=swap'); 
@@ -121,18 +122,17 @@ text-align:left;
 position:relative;
 left: 18%;
 }
-.home{
-  background-color: rgb(255, 204, 0); /* Blue background */
-  border: none; 
-  border-radius: 3px;
-  color:white ; /* White text */
-  padding: 2px 6px; /* Some padding */
-  font-size: 16px; /* Set a font size */
-  cursor: pointer; }
+  .material-symbols-outlined{
+  color:black;
+  width:7vw;
+  height:3vh;}
+  
 </style>
 <body>
 <div class="header">
-<a href="index.html" ><button class="home"><i class="fa-solid fa-circle-left"></i></button></a>
+<a class="material-symbols-outlined" href="index.html" >
+keyboard_backspace
+</a>
 </div>
 <div class="d1">
 <h4 class="ani-txt"><b>Click The Section To Download PDF    </b></h4>
