--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ S</pre>
 <div class="icons">
 <a href="https://www.linkedin.com/in/haresh-panigrahi-825939242" target="blank" ><i class="fa-brands fa-linkedin"></i></a>
 <a href="https://youtube.com/@AmaClass" target="_blank" ><i class="fa-brands fa-youtube"></i></a>
-<a href="https://github.com/123techno" target="blank" ><i class="fa-brands fa-github"></i></a>
+<a href="https://github.com/Haresh79" target="blank" ><i class="fa-brands fa-github"></i></a>
 <a href="https://facebook.com/groups/665683438592386/" target="blank" ><i class="fa-brands fa-facebook-f"></i></a>
 </div>
 <div class="fdiv3">
