--- a/notes.html
+++ b/notes.html
@@ -2,29 +2,48 @@
 <html>
 <head>
 <title>Notes</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <style type="text/css">
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 h4{ font-family:'acme';
-    font-size:20px;
+    font-size:40px;
     text-shadow:1px 1px #fccf03;
   }
+    h3{
+    font-size:28;
+    }
   .flex{ display:flex;
   }
   .it-notes{border:2px solid #f5d142;
   height:40vh;
   width:95vw;
   overflow:auto;
+  background-color:rgba(255, 255, 204, 0.2);
   }
   .short-notes{border:2px solid #f5d142;
   height:40vh;
   width:95vw;
+  background-color:rgba(255, 255, 204, 0.2);
   }
   a{
   text-decoration:none;
   color:black;}
+    
+.material-symbols-outlined{
+color:black;
+width:7vw;
+height:3vh;
+}.material-symbols-outlined:hover{
+
+color:black;}
 </style>
 </head>
 <body>
+<div class="header">
+<a class="material-symbols-outlined" href="index.html" >
+keyboard_backspace
+</a>
+</div>
 <h4>Class 12th notes</h4>
 <div class="it-notes">
 <a href="https://drive.google.com/file/d/1L1A5kDYLQ90hjdmHisDsOygWbegP8A31/view?usp=drivesdk"><h3>1. Computer Network</h3></a>
