--- a/meterial.html
+++ b/meterial.html
@@ -139,16 +139,16 @@ keyboard_backspace
 </div>
 <div>
 <section class="s1">
-<a href="#"><h2>Important Questions of IT</h2></a>
+<a href="https://docs.google.com/presentation/d/1rrqK6dASjP4BF8oiVUgIDoGcLK5QHtJv/edit?usp=drivesdk&ouid=102381061564918243749&rtpof=true&sd=true"><h2>Important Questions of IT</h2></a>
 </section>
 <section class="s2">
-<a href="#" ><h2 >Important Questions of Physics</h2></a>
+<a href="https://drive.google.com/file/d/1s3Fq8ao9XSBKVAe8SeucplpBRJwU7w6Q/view?usp=drivesdk" ><h2 >Important Questions of Physics</h2></a>
 </section>
 <section class="s3">
-<a href="#" ><h2>Important Questions of Chemistry</h2></a>
+<a href="https://drive.google.com/file/d/1sJhM7ThBYFfHWVt9xWSyRtGtgXcD7yFf/view?usp=drivesdk" ><h2>Important Questions of Chemistry</h2></a>
 </section>
 <section class="s4">
-<a href="#" ><h2>Important Questions of Mathemetics</h2></a>
+<a href="https://drive.google.com/file/d/1sBj46lFwclJqgCorSbTNWvMgaQXb1Qvt/view?usp=drivesdk" ><h2>Important Questions of Mathemetics</h2></a>
 </section>
 <section class="s5">
 <a href="#" ><h2>Important Questions of Biology</h2></a>
