--- a/index.html
+++ b/index.html
@@ -300,7 +300,8 @@ Keep Study Keep Happy :)
 <section class="section2">
 <div class="s2div1">
 <img src="20221030_155330.jpg" class="poster" width="250px"></div>
-<div class=""s2div2><h2 class="s2text" >Odisha's Number 1 Codding Course Created By HARESH PANIGRAHI !</h2>
+<div class=""s2div2><h2 class="s2text" >Odisha's Number 1 Codding Course Created By HARESH PANIGRAHI !
+ in this course you will be going to improve your coding skills...</h2>
 <a href="https://youtube.com/playlist?list=PLg96AfYE6W2MVH7NB7koYPTxwibeHm_8H"><button class="s2btn">WATCH NOW</button></a> </div>
 </section>
 
@@ -309,8 +310,11 @@ Keep Study Keep Happy :)
 
 
 
-<h4>CODING</h4>
-
+<h4 style="font-size:40px">CODING</h4>
+<p>This is a channel where you can Learn Coding 
+We will going to introduce a big course that is CEMICOLON 
+ where yo learn HTML, CSS, JAVASCRIPT, Python,JAVA and 
+ more</p>
 
 
 
