--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ Keep Study Keep Happy :)
 
 
 
-<h4 style="font-size:40px">CODING</h4>
+<h4 style="font-size:40px color:#6828a1">CODING</h4>
 <p>This is a channel where you can Learn Coding 
 We will going to introduce a big course that is CEMICOLON 
  where yo learn HTML, CSS, JAVASCRIPT, Python,JAVA and 
