--- a/index.html
+++ b/index.html
@@ -195,13 +195,14 @@ justify-content:space-evenly;
 align-items:center;
 margin-top:100px;
 }
-.s3div1{background-color:#ffef5e;
-}
-.s3div1 pre{ position: relative;
-top:6px;
-left: 30px;
+.s3div1{background-color:rgb(0,0,0);
+
+position: relative;
+top:5px;
+left:5px;
+
 font-family: 'Roboto', sans-serif;
-font-size:25px; font-weight:bold;
+
 }
 
 footer{
@@ -310,7 +311,7 @@ Keep Study Keep Happy :)
 
 
 
-<h4 style="font-size:40px color:#6828a1">CODING</h4>
+<h4 style="font-size:40px; color:#6828a1;">CODING</h4>
 <p>This is a channel where you can Learn Coding 
 We will going to introduce a big course that is CEMICOLON 
  where yo learn HTML, CSS, JAVASCRIPT, Python,JAVA and 
