--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ justify-content:space-evenly;
 align-items:center;
 margin-top:100px;
 }
-.s3div1{background-color:rgb(0,0,0);
+.s3div1{background-color:rgb(255, 255, 255);
 
 position: relative;
 top:5px;
@@ -204,6 +204,11 @@ left:5px;
 font-family: 'Roboto', sans-serif;
 
 }
+ .s3div1 h4{
+  font-family:'poppins';
+  position: relative;
+  left:10px;
+ }
 
 footer{
 background-color:rgba(224, 224, 222, 0.2);
