--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ color:black ; /* White text */
 .section2{border:none;
 border-radius:15px;
 height:250px;
-background-color:#ffef5e;
+background-color:rgba(224, 224, 222, 0.2);
 margin: 100px 1px;
 display:flex;
 justify-content:center;
