--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ font-family: 'Roboto', sans-serif;
   position: relative;
   left:10px;
  }
+ .s3div1 p{
+ font-family:'roboto';}
 
 footer{
 background-color:rgba(224, 224, 222, 0.2);
@@ -318,7 +320,7 @@ Keep Study Keep Happy :)
 
 <h4 style="font-size:40px; color:#6828a1;">CODING</h4>
 <p>This is a channel where you can Learn Coding 
-We will going to introduce a big course that is CEMICOLON 
+We will going to introduce a big course that is SEMICOLON 
  where yo learn HTML, CSS, JAVASCRIPT, Python,JAVA and 
  more</p>
 
