--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ display: inline-block;
 height: 2.7rem;
 text-align: center;
 padding: 0.6rem;
+font-size:20px;
 /*background-image: url('/storage/emulated/0/Ama Class website/top banner image.png');*/
 background-color: #f2c41b;
 background-size: 300px;
@@ -274,7 +275,7 @@ Keep Study Keep Happy :)
 <li><a href="meterial.html"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
 <li><a href="notes.html"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
 <li><a href="#"><button class="btn"><i class="fa fa-home"></i></button></a><br><span class="icontext">Home</span></li>
-<li><a href=""><button class="btn"><i class="fa-solid fa-circle-chevron-down"></i></button></a><span class="icontext">Tutorial</span></li>
+<li><a href=""><button class="btn"><i class="fa-solid fa-circle-chevron-down"></i></button></a><br><span class="icontext">Tutorial</span></li>
 </ul>
 </nav>
 
