--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Keep Study Keep Happy :)
 <li><a href="meterial.html"><button class="btn"><i class="fa fa-book"></i></button></a><br><span class="icontext">Material</span></li>
 <li><a href="notes.html"><button class="btn"><i class="fa fa-file"></i> </button></a><br><span class="icontext">Notes</span></li>
 <li><a href="#"><button class="btn"><i class="fa fa-home"></i></button></a><br><span class="icontext">Home</span></li>
-<li><a href=""><button class="btn"><i class="fa-solid fa-circle-chevron-down"></i></button></a><br><span class="icontext">Tutorial</span></li>
+<li><a href="tutorial.html"><button class="btn"><i class="fa-solid fa-circle-chevron-down"></i></button></a><br><span class="icontext">Tutorials</span></li>
 </ul>
 </nav>
 
