--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@ body{
 	.out{
 	 background-color:#2e3e52;
 	 border-radius:8px;
-	 height:700px;
+	 height:95%;
 	 width:95%;
 	 text-align:center;
 	 
@@ -23,7 +23,9 @@ body{
 	}
     h1{
       color:#e8ed5a;
-    }
+	
+	
+}
     .links{
        display:grid;
        align-items:center;
