--- a/tutorial.html
+++ b/tutorial.html
@@ -19,10 +19,12 @@ body{
 	 
 	}
 	h2 {
-	  
+	  font-size:30px;
 	}
     h1{
-      color:#e8ed5a;
+        font-size:35px;
+	color:#e8ed5a;
+	    
 	
 	
 }
