--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@ body{
 	.out{
 	 background-color:#2e3e52;
 	 border-radius:8px;
-	 height:95%;
+	 height:1000px;
 	 width:95%;
 	 text-align:center;
 	 
