--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>home page // ama class </title>
-<link rel="icon" type="image/x-icon" href="">
+<link rel="icon" type="image/x-icon" href="20221224_204244.png">
 <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap'); 
  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Oriya:wght@600&display=swap'); 
