--- a/HTML.html
+++ b/HTML.html
@@ -7,7 +7,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Nunito&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 <style>
 style{
+	
 	background-color:#c2fcd2;
+font-family:'Roboto Mono', monospace;
 	
 	
 }
