--- a/HTML.html
+++ b/HTML.html
@@ -6,11 +6,14 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Nunito&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
 <style>
+body{
+padding:6px;
+}
 style{
 	
 	background-color:#c2fcd2;
 font-family:'Roboto Mono', monospace;
-	
+font-size:20px;
 	
 }
 .output{
