--- a/HTML.html
+++ b/HTML.html
@@ -13,7 +13,7 @@ style{
 	
 	background-color:#c2fcd2;
 font-family:'Roboto Mono', monospace;
-font-size:20px;
+font-size:2px;
 	
 }
 .output{
@@ -306,7 +306,7 @@ uments_20230128_145737.jpg" width="100px">
 </style></samp>
 <h4>OUTPUT</h4>
 <div class="output">
-<img src="/storage/emulated/0/Android/media/com.whatsapp/WhatsApp/Media/WhatsApp Documents/IMG_20230128_145737.jpg" width="100px">
+<img src="" width="100px">
 </div>
 <font>NOTE: The link's destination is specified in the src attribute. </font>
 <h2> Html List</h2>
