--- a/HTML.html
+++ b/HTML.html
@@ -298,7 +298,7 @@ HTML image are defined with the "img" tag. </p>
    </head>
    
    <body>
-   	<img src="WhatsApp Doc
+   	<img src="Doc
 uments_20230128_145737.jpg" width="100px">
    </body>
  </html>
