--- a/HTML.html
+++ b/HTML.html
@@ -276,7 +276,7 @@ HTML links are defined with the "a" tag. </p>
    </head>
    
    <body>
-   	<a href="www.amaclass.ml">Ama Class</a>
+   	<a href="amaclass.ml">Ama Class</a>
    </body>
  </html>
  
