--- a/tutorial.html
+++ b/tutorial.html
@@ -46,7 +46,7 @@ body{
     <h1>TUTORIALS</h1>
    <div class="links">
 <a href="HTML.html" ><h2>Learn HTML </h2></a>
-<a href="" >	<h2>Learn CSS </h2></a>
+<a href="css.html" >	<h2>Learn CSS </h2></a>
 <a href="" >    <h2>Learn Java Script </h2></a>
 <a href="" >	<h2>Learn C </h2></a>
 <a href="" >	<h2>Learn Python </h2></a>
