--- a/css.html
+++ b/css.html
@@ -8,8 +8,8 @@
 
 <style>
 body{
-padding-right:10px;
-padding-left:10px;
+padding-right:15px;
+padding-left:15px
 }
 font{
 color:red;
@@ -45,7 +45,7 @@ font-size:20px;
 }
 textarea{
 background:#c2fcd2;
-height:130px; width:96%;
+height:200px; width:96%;
 border:none;
 border-radius:2px;
 padding:6px;
@@ -57,7 +57,7 @@ padding:10px;
 }
 #html-code{
 background:#c2fcd2;
-height:140px; width:100%;
+height:200px; width:100%;
 border:1px solid green;
 border-radius:4px;
 }
