--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <style>
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto&display=swap'); 
  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Oriya:wght@600&display=swap'); 
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 *{
  margin: 0;
  padding: 0;
@@ -341,7 +344,16 @@ We will going to introduce a big course that is SEMICOLON
 
 </div>
 </section>
+ <section>
+  <div>
+   <h1>HTML, CSS And JavaScript CODE Editor</h1>
+  <a href="htmlcssjscoderuner.html"> <span class="material-symbols-outlined"> 
 
+terminal
+
+   </span> <h5>Click Here To Open Editor</h5> </a
+   </div>
+</section>
 <footer>
 <div class="fdiv1"><span><a href="#" >
 <img src="20221224_204244.png" alt="channel logo" width="40px">
