--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@ We will going to introduce a big course that is SEMICOLON
 </div>
 </section>
  <section>
-  <div>
-   <h1>HTML, CSS And JavaScript CODE Editor</h1>
+  <div style="padding:4px; margin-left:4px;">
+   <h4>HTML, CSS And JavaScript code Editor</h4>
   <a href="htmlcssjscoderuner.html"> <span class="material-symbols-outlined"> 
 
 terminal
