--- a/index.html
+++ b/index.html
@@ -36,17 +36,7 @@ a{
 text-decoration:none;
 display: inline-block;
 }
-.topbanner{
-/*margin: auto;*/
-height: 2.7rem;
-text-align: center;
-padding: 0.6rem;
-font-size:20px;
-/*background-image: url('/storage/emulated/0/Ama Class website/top banner image.png');*/
-background-color: #f2c41b;
-background-size: 300px;
-color: white;
-}
+
 nav{
 padding: 8px;
 position: sticky;
@@ -54,6 +44,7 @@ top:0px;
 background-color:white;
 height: 90px;
 box-shadow:0px 1px 3px #595958;
+z-index:999;
 }
 .logo{
 float: left;
@@ -270,10 +261,6 @@ font-size:12px;}
 </style>
 </head>
 <body>
-<div class="topbanner">
-Keep Study Keep Happy :)
-</div>
-
 <nav class="navbar" >
 <img src="20221224_213732.png"  class="logo">
 <ul clas="menue">
