--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ nav{
 padding: 8px;
 position: sticky;
 top:0px;
-background-color:white;
-height: 90px;
+background-color:#f8ffdb;
+height: 90px; width:100vw;
 box-shadow:0px 1px 3px #595958;
 z-index:999;
 }
