--- a/tutorial.html
+++ b/tutorial.html
@@ -47,7 +47,7 @@ body{
    <div class="links">
 <a href="HTML.html" ><h2>Learn HTML </h2></a>
 <a href="css.html" >	<h2>Learn CSS </h2></a>
-<a href="" >    <h2>Learn Java Script </h2></a>
+<a href="js.html" >    <h2>Learn Java Script </h2></a>
 <a href="" >	<h2>Learn C </h2></a>
 <a href="" >	<h2>Learn Python </h2></a>
 <a href="" >	<h2>Learn C++</h2></a>
