--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ nav{
 padding: 8px;
 position: sticky;
 top:0px;
-background-color:#f8ffdb;
+background-color:#242424;
 height: 90px; width:100vw;
 box-shadow:0px 1px 3px #595958;
 z-index:999;
