--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ display: inline-block;
 nav{
 padding: 8px;
 position: sticky;
-top:0px;
+top:0px; color: white;
 background-color:#242424;
 height: 90px; width:100vw;
 box-shadow:0px 1px 3px #595958;
