--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ display: inline-block;
 nav{
 padding: 8px;
 position: sticky;
-top:0px; color: white;
-background-color:#242424;
-height: 90px; width:100vw;
+top:0px; color:black;
+background-color:#8fd0ff;
+height: 90px; width:100%;
 box-shadow:0px 1px 3px #595958;
 z-index:999;
 }
