--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li{list-style-type:none; width:20vw; text-align:center;}
 
 li:hover{background:white; height:50px;}
 
-li>a{text-decoration:none; color:black; position:relative; top:30%;
+li>a{text-decoration:none; color:black;
 
 font-weight:bold; cursor:pointer; user-select:none;}
 
@@ -63,8 +63,7 @@ ul{float:right; display:flex; }
 .logo{
 float: left;
 padding:2px;
-width: 250px;
-margin: auto;
+width: 200px;
 }
 li{
 
