--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@ top:0px; color:black;
 
 background-color:#8fd0ff;
 
-height: 50px; width:100%;
+height: 60px; width:100%;
 
 z-index:999;
 
 }
 
-li{list-style-type:none; width:20vw; text-align:center;}
+li{list-style-type:none; width:20vw; 
+ text-align:center; height:60px;}
 
-li:hover{background:white; height:50px;}
+li:hover{background:white;}
 
 li>a{text-decoration:none; color:black;
 
