--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@ align-self:center;
 align-self:center;
 padding: 10px;
 /*justify-items:center;*/}
-@media(max-width:480px){
+/*@media(max-width:480px){
 .frontlogo{
 width: 200px;
 } h2{ font-size:21px;} .m_para{ font-size:12px;}
 }
-/*Example Section contains 3 boxes*/
 .example{
 height:300px;
 padding:2px;
@@ -124,9 +123,9 @@ color: rgb(255, 255,255);}
 background-color:rgb(255, 204, 0);
 border:none;
 border-radius:3px;
-color:black ; /* White text */
-  padding: 2px 6px; /* Some padding */
-  font-size: 12px; /* Set a font size */
+color:black ; 
+  padding: 2px 6px; 
+  font-size: 12px; 
   cursor: pointer; 
   margin:auto;
   display:flex;
@@ -164,8 +163,8 @@ font-size:18px;
 background-color:#852cde;
 border:none;
 border-radius:4px;
-color:white; /* White text */
-  padding: 2px 6px; /* Some padding */
+color:white; 
+  padding: 2px 6px; 
   font-size: 12px; 
   font-weight:bold;
   cursor: pointer; 
@@ -254,7 +253,7 @@ justify-content:center;}
 
 .subfooter p{
 align-self:center;
-font-size:12px;}
+font-size:12px;}*/
 </style>
 </head>
 <body>
