--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ src="https://camo.githubusercontent.com/61491d59e71fec5c794945fed916a4a682b6c040
 </section>
 <footer>
 <div class="fdiv1">
-<img src="/storage/emulated/0/Pictures/YouTube/20221224_204244.png" alt="channel logo" width="40px">
+<img src="20221224_204244.png" alt="channel logo" width="40px">
 <label> Ama Class</label>
 <p>Join us Odisha's No.1 Codding Channel !</p>
 </div>
