--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@ margin:10px 0 0 0; padding:10px;}
 
 .gifimg{position:relative; left:50%; transform:translateX(-50%);}
 
-h2{font-family: 'Roboto', sans-serif;}
-h3{font-family: 'Roboto', sans-serif;}
-h5{font-family: 'Roboto', sans-serif;}
-label {font-family: 'Roboto', sans-serif;}
+h2{font-family: 'Wix Madefor Display', sans-serif; }
+h3{font-family: 'Wix Madefor Display', sans-serif; }
+h5{font-family: 'Wix Madefor Display', sans-serif;}
+label { font-family: 'Wix Madefor Display', sans-serif;}
 p{font-family: 'Lato', sans-serif;}
 span{font-family: 'Lato', sans-serif;}
 button{font-family: 'Nunito', sans-serif;}
@@ -106,7 +106,7 @@ ul>li>a{font-family: 'Rubik', sans-serif;}
 </head>
 <body>
 <nav class="navbar" >
-<img src="/storage/emulated/0/Android/media/com.whatsapp/WhatsApp/Media/WhatsApp Documents/20230511_221027.png"  class="logo">
+<img src="20230511_221027.png"  class="logo">
 <ul>
 <li><a href="#">Home &#10095; </a></li>
 <li><a href="tutorial.html">Tutorials &#10095; </a></li>
@@ -151,7 +151,7 @@ language basics || this is a complete free course. </p>
 <label style="font-size:40px;" >Code Editor</label>
 <section class="sec-3" >
 <p>With our online code editor, you can edit code and view the result in your browser</p>
-<img src="/storage/emulated/0/Download/VN20230512_123415.gif" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
+<img src="VN20230512_123415.gif" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
 border-radius:8px;" >
 <button class="cebtn" >(HTML, CSS, JS) Editor</button>
 </section>
