--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ margin:10px 0 0 0; padding:10px;}
 
 .gifimg{position:relative; left:50%; transform:translateX(-50%);}
 .subfooter>p{font-size:10px;}
-a{text-decoration:none;}
+a{text-decoration:none; color:white;}
  
 h2{font-family: 'Wix Madefor Display', sans-serif; }
 h3{font-family: 'Wix Madefor Display', sans-serif; }
