--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ watching playlists of class 11th in ama class youtube channel || complete free c
 <button><a href="https://youtube.com/playlist?list=PLg96AfYE6W2PDSdkzy-EcJfdObdTeEsPA">Watch Now</a></button>
 </div>
 <div class="box" >
-<img class="poster" src="https://i9.ytimg.com/vi/IfGzFb4Lfok/mqdefault.jpg?v=633e4019&sqp=CNyF-aIG&rs=AOn4CLDcxNV8GlqyWe3uQ9M1H19Q2-Y5pQ"
+<img class="poster" src="2023-05-13_09-19-27.jpg"
 width="250px" >
 <h3>Class 12th IT</h3>
 <p>You can cover the complete Class 12th Syllabus with us by 
