--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ footer {background:rgba(166,166,166,0.1); margin:50px 0 0 0; user-select:none;}
   font-size: 20px;
   width: 30px; height:30px;
   text-align: center;
-  border-radius:50%;  cursor:pointer;
+  border-radius:5px;  cursor:pointer;
   text-decoration: none;
 }
 .fa-facebook {
