--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@ footer {background:rgba(166,166,166,0.1); margin:50px 0 0 0; user-select:none;}
   text-align: center;
   border-radius:5px;  cursor:pointer;
   text-decoration: none;
+  background:white;
+  color:black;
 }
-.fa-facebook {
+/*.fa-facebook {
   background: #3B5998;
   color: white;
 }
@@ -89,7 +91,7 @@ background:#292828;
 .material-symbols-outlined{
 background:#ebbf59;
 color:white;
-}
+}*/
 .subfooter{
 margin:10px 0 0 0; padding:10px;}
 
