--- a/index.html
+++ b/index.html
@@ -69,29 +69,22 @@ footer {background:rgba(166,166,166,0.1); margin:50px 0 0 0; user-select:none;}
   text-align: center;
   border-radius:5px;  cursor:pointer;
   text-decoration: none;
-  background:white;
-  color:black;
 }
-/*.fa-facebook {
-  background: #3B5998;
-  color: white;
+.fa-facebook {
+  color:#034dad;
 }
 .fa-linkedin{
-background:#1891ed;
-  color: white;
+  color:#208ad6;
   }
 .fa-youtube-play{
-  background:white;
-  color: #fa2323;
+  color:#fa4b3e;
 }
 .fa-github{
-background:#292828;
-  color: white;
+  color:black;
   }
 .material-symbols-outlined{
-background:#ebbf59;
-color:white;
-}*/
+color:#e0ad14;
+}
 .subfooter{
 margin:10px 0 0 0; padding:10px;}
 
