--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ p{font-family: 'Lato', sans-serif;}
 span{font-family: 'Lato', sans-serif;}
 button{font-family: 'Nunito', sans-serif;}
 ul>li>a{font-family: 'Rubik', sans-serif;}
+footer>p{font-family: 'Ysabeau', sans-serif;}
 </style>
 </head>
 <body>
