--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ footer {background:rgba(166,166,166,0.1); margin:50px 0 0 0; user-select:none;}
   color:black;
   }
 .material-symbols-outlined{
-color:#0aecf0;
+color:#00ff6e;
 }
 .subfooter{
 margin:10px 0 0 0; padding:10px;}
