--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ language basics || this is a complete free course. </p>
 <p>With our online code editor, you can edit code and view the result in your browser</p>
 <img src="VN20230512_123415.gif" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
 border-radius:8px;" >
-<button class="cebtn" ><a href="htmlcssjscoderuner.html">(HTML, CSS, JS) Editor</a></button>
+<a href="htmlcssjscoderuner.html"><button class="cebtn" >(HTML, CSS, JS) Editor</button></a>
 </section>
 
 <label style="margin:30px 0 30px 0; font-size:30px" >Testimonials</label>
