--- a/HTML.html
+++ b/HTML.html
@@ -306,7 +306,7 @@ uments_20230128_145737.jpg" width="100px">
 </style></samp>
 <h4>OUTPUT</h4>
 <div class="output">
-<img src="20230520_202633.png" width="100px">
+<img src="20230523_221129.jpg" width="100px">
 </div>
 <font>NOTE: The link's destination is specified in the src attribute. </font>
 <h2> Html List</h2>
