--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
 
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	<meta name="description" content="This website aim is to provide help to student class 11th and 12th . Education, Motivation, Information, Thecnology and coding is our main aim." />
+
+    <meta name="keywords" content="Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS" />
  
 <title>Ama Class</title>
-<!--<link rel="Shortcut Icon" type="image/png" href="20230520_202624.jpg">-->
+<link rel="Shortcut Icon" type="image/x-icon" href="20230523_221129.jpg">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
