--- a/htmlcssjscoderuner.html
+++ b/htmlcssjscoderuner.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+	
+
+	
+
+	
+
+	
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+	<meta name="description" content="This website aim is to provide help to student class 11th and 12th . Education, Motivation, Information, Thecnology and coding is our main aim." />
+
+    <meta name="keywords" content="Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS" />
+<title>Code Editor</title>
 <style>
 textarea{ height:300px;}
 lebel{ background:#509663;width:100%; padding:2px; border-radius:2px;
