--- a/htmlcssjscoderuner.html
+++ b/htmlcssjscoderuner.html
@@ -5,15 +5,17 @@
 
 	
 
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta charset="UTF-8" />
 	
 
 	
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-	<meta name="description" content="This website aim is to provide help to student class 11th and 12th . Education, Motivation, Information, Thecnology and coding is our main aim." />
+	<meta name="description" content="This os a simple web page where you can run HTML CSS and JavaScript code very easily." />
 
-    <meta name="keywords" content="Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS" />
+    <meta name="keywords" content="html css js code runer, cod editor, ama class code editor ,Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS" />
 <title>Code Editor</title>
 <style>
 textarea{ height:300px;}
