--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@ left:50%; transform:translateX(-50%); color:white; margin:10px 0;}
 .sec-3>img{ position:relative; left:50%; transform:translateX(-50%);}
 .sec-3>p{position:relative; left:50%; transform:translateX(-50%);
 width:60%;}
+	
+.sec-3b>img{ position:relative; left:50%; transform:translateX(-50%);}
+.sec-3b>p{position:relative; left:50%; transform:translateX(-50%);
+width:60%;}
+	
+
+	
 
 .sec-4{background:rgba(166,166,166,0.1); width:300px; margin:auto;
 border-radius:10px; user-select:none;}
@@ -166,7 +173,19 @@ language basics || this is a complete free course. </p>
 border-radius:8px;" >
 <a href="htmlcssjscoderuner.html"><button class="cebtn" >(HTML, CSS, JS) Editor</button></a>
 </section>
+	<label style="font-size:40px; margin-top:30px;" >Color Picker</label>
+<section class="sec-3b" >
 
+<p>By the help of our Color Picker you can easily choose any best Color according to you.</p>
+
+<img src="" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
+
+border-radius:8px;" >
+
+<a href="https://haresh79.github.io/Color-Picker-/"><button class="cebtn" >Color Picker </button></a>
+
+</section>
+	
 <label style="margin:30px 0 30px 0; font-size:30px" >Testimonials</label>
 <section class="sec-4" >
 <span style="margin:5% 10%" >&#10077;</span>
