--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ border-radius:8px;" >
 
 <p>By the help of our Color Picker you can easily choose any best Color according to you.</p>
 
-<img src="" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
+<img src="Screenshot_2023_0528_154543.gif" width="60%" style="margin:10px 0; border:4px solid #e0e0e0; 
 
 border-radius:8px;" >
 
