--- a/notes.html
+++ b/notes.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 h4{ font-family:'acme';
-    font-size:80px;
+    font-size:10v;
     text-shadow:2px 1px #1bbffa;
     text-align:center;
     margin-bottom:-5px;
@@ -18,14 +18,14 @@ h4{ font-family:'acme';
   }
   .it-notes{border:2px solid #1bbffa;
   height:100%;
-  width:90vw;
+  width:80vw; border-radius:10px;
   background-color:rgba(27, 191, 250, 0.2);
   position:relative; left:50%; transform:translateX(-50%);
   }
   .it-notes{padding:5px 0 0 5vw;}
   .short-notes{border:2px solid #1bbffa;
   height:100%;
-  width:90vw;
+  width:80vw; border-radius:10px;
   background-color:rgba(27, 191, 250, 0.2);
   position:relative; left:50%; transform:translateX(-50%);
   padding:5px 0 0 5vw;
@@ -33,13 +33,10 @@ h4{ font-family:'acme';
   a{
   text-decoration:none;
   color:black;}
-    
-.material-symbols-outlined{
-color:black; font-size:10vw;
-}
-.material-symbols-outlined:hover{
 
-color:#404040;}
+
+
+
 </style>
 </head>
 <body>
