--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<meta charset="UTF-8" />
+
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	<meta name="description" content="This website aim is to provide help to student class 11th and 12th . Education, Motivation, Information, Thecnology and coding is our main aim." />
+
+    <meta name="keywords" content="Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS" />
+
+ 
 <title>Notes</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 <style type="text/css">
