--- a/notes.html
+++ b/notes.html
@@ -15,10 +15,10 @@
 <style type="text/css">
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 h4{ font-family:'acme';
-    font-size:10v;
+    font-size:10vw;
     text-shadow:2px 1px #1bbffa;
     text-align:center;
-    margin-bottom:-5px;
+    margin-bottom:5px;
   }
     h3{
     font-size:4vw;
@@ -49,11 +49,7 @@ h4{ font-family:'acme';
 </style>
 </head>
 <body>
-<div class="header">
-<a class="material-symbols-outlined" href="index.html" >
-keyboard_backspace
-</a>
-</div>
+
 <h4>Class 12th notes</h4>
 <div class="it-notes">
 <a href="https://drive.google.com/file/d/1L1A5kDYLQ90hjdmHisDsOygWbegP8A31/view?usp=drivesdk"><h3>1. Computer Network</h3></a>
