--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>//tutorial </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />	<meta name="description" content="You can learn coding from our website HTML, CSS, JS, C, C++, Python, Java " />
+<meta name="keywords" content="Ama class, Ama Class, amaclass, haresh panigrahi, AC, CHSE , Class11th , Class12th , Odia, coding, education, study , motivation, IT, information technology, Cs, CS, tutorial, html, css, javascript" />
+
+	
+<title>tutorial </title>
 <style>
 body{
 	display:flex;
