--- a/tutorial.html
+++ b/tutorial.html
@@ -19,7 +19,7 @@ body{
 	.out{
 	 background-color:#2e3e52;
 	 border-radius:8px;
-	 height:2000px;
+	 height:100vh;
 	 width:95%;
 	 text-align:center;
 	 
