--- a/tutorial.html
+++ b/tutorial.html
@@ -56,7 +56,7 @@ body{
 <a href="js.html" >    <h2>Learn Java Script </h2></a>
 <a href="" >	<h2>Learn C </h2></a>
 <a href="" >	<h2>Learn Python </h2></a>
-<a href="" >	<h2>Learn C++</h2></a>
+<a href="cpp.html" >	<h2>Learn C++</h2></a>
 <a href="" >	<h2>Learn Java </h2></a>
 	</div>
 	</div>
