--- a/cpp.html
+++ b/cpp.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
 <title>C++ Code note</title>
 <style type="text/css">
 div{background:black;
